MyTaskManagement/force-app/main/default/objects/Task__c/Task__c.object-meta.xml
<CustomObject>
    <label>Task Board Item</label>
    <pluralLabel>Task Board Items</pluralLabel>
    <nameField>
        <label>Task Title</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Custom object for Task Management Board - stores tasks for ToDo, InProgress, and Completed columns</description>
</CustomObject>