MyTaskManagement/force-app/main/default/objects/Task__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
                <default>true</default>
                <label>Work</label>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>