MyTaskManagement/force-app/main/default/objects/Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ToDo</fullName>
                <default>true</default>
                <label>ToDo</label>
            </value>
            <value>
                <fullName>InProgress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>