MyTaskManagement/force-app/main/default/objects/Task__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>Text</type>
    <length>255</length>
    <description>Comma-separated tags for categorizing tasks</description>
</CustomField>